--- a/app/Resources/views/category.html.twig
+++ b/app/Resources/views/category.html.twig
@@ -1,7 +1,10 @@
+<link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}" />
+<link rel="stylesheet" href="{{ asset('css/main.css') }}" />
+<link rel="stylesheet" href="{{ asset('css/login.css') }}" />
 <div>
     <h1>List of Task Categories</h1>
     ><a href="/editcat/{{ 0 }}" > Click Here to add new category </a>
-    <table>
+    <table class="table">
         <tr>
             <th>ID</th>
             <th>Name</th>
