--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -1,16 +1,19 @@
 {# app/Resources/views/security/login.html.twig #}
 {# ... you will probably extend your base template, like base.html.twig #}
+<link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}" />
+<link rel="stylesheet" href="{{ asset('css/main.css') }}" />
+<link rel="stylesheet" href="{{ asset('css/login.css') }}" />
 
-{% if error %}
-    <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-{% endif %}
 
-<form action="{{ path('login') }}" method="post">
+
+<div class="wrapper">
+<form action="{{ path('login') }}" method="post" class="form-signin">
+    <h2 class="form-signin-heading">Please login</h2>
     <label for="username">Username:</label>
-    <input type="text" id="username" name="_username" value="{{ last_username }}" />
+    <input type="text" class="form-control" id="username" name="_username" value="{{ last_username }}" />
 
     <label for="password">Password:</label>
-    <input type="password" id="password" name="_password" />
+    <input type="password" class="form-control" id="password" name="_password" />
 
     {#
         If you want to control the URL the user
@@ -18,5 +21,13 @@
         <input type="hidden" name="_target_path" value="/account" />
     #}
 
-    <button type="submit">login</button>
+    <button type="submit" class="btn btn-lg btn-primary btn-block">login</button>
+    <a href="/register">Not a user? Register here</a>
+    {% if error %}
+        <div class="alert alert-danger">
+            <strong>Could not log in</strong> {{ error.messageKey|trans(error.messageData, 'security') }}
+        </div>
+    {% endif %}
 </form>
+
+</div>
