--- a/app/Resources/views/index.html.twig
+++ b/app/Resources/views/index.html.twig
@@ -3,14 +3,13 @@
 <head>
     <title>Task Manager</title>
     <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}" />
-    <link rel="stylesheet" href="{{ asset('css/main.css') }}" />
     <link rel="stylesheet" href="{{ asset('css/login.css') }}" />
 </head>
 <body>
 <div id="wrapper" style="text-align: center">
 <div class="jumbotron">
     <h1 class="display-3">Task manager</h1>
-    <p class="lead">A simple web site that makes it easier for you to plan your tasks.</p>
+    <p class="lead">Task manager is a Symfony framework based tool used for tracing your advancement.</p>
     <hr class="my-4">
     <p class="lead">
         <ul>
