--- a/app/Resources/views/security/register.html.twig
+++ b/app/Resources/views/security/register.html.twig
@@ -1,6 +1,5 @@
 {# app/Resources/views/registration/register.html.twig #}
 <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}" />
-<link rel="stylesheet" href="{{ asset('css/main.css') }}" />
 <link rel="stylesheet" href="{{ asset('css/login.css') }}" />
 <h2 class="form-signin-heading">Please Register</h2>
 {{ form(form, {'attr': {'class': 'form-signin'}}) }}
@@ -20,4 +19,5 @@
 <button type="submit" class="btn btn-lg btn-primary btn-block">Register!</button>
 {{ form_end(form) }}
 
+<li><a class="btn btn-primary btn-lg" href="/" role="button">Go back</a></li>
 class="form-control"
