--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -1,35 +1,44 @@
 {# app/Resources/views/security/login.html.twig #}
 {# ... you will probably extend your base template, like base.html.twig #}
 <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}" />
-<link rel="stylesheet" href="{{ asset('css/login.css') }}" />
-
-
-<head><script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src='https://www.google.com/recaptcha/api.js'></script></head>
-
-<div class="wrapper">
-<form action="{{ path('login') }}" method="post" class="form-signin">
-    <h2 class="form-signin-heading">Please login</h2>
-    <label for="username">Username:</label>
-    <input type="text" class="form-control" id="username" name="_username" value="{{ last_username }}" />
-
-    <label for="password">Password:</label>
-    <input type="password" class="form-control" id="password" name="_password" />
-
-    {#
-        If you want to control the URL the user
-        is redirected to on success (more details below)
-        <input type="hidden" name="_target_path" value="/account" />
-    #}
-
-    <button type="submit" class="btn btn-lg btn-primary btn-block">login</button>
-    <div class="g-recaptcha"data-sitekey="6LfSYCEUAAAAAO3P4akQjAY8DAlSQ1UdWHQe5lIv"></div>
-    <a href="/register">Not a user? Register here</a>
-    {% if error %}
-        <div class="alert alert-danger">
-            <strong>Could not log in</strong> {{ error.messageKey|trans(error.messageData, 'security') }}
+<link rel="stylesheet" href="{{ asset('css/logreg.css') }}" />
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+            <div class="panel panel-login">
+                <div class="panel-heading">
+                    <div class="row">
+                        <div class="col-xs-6">
+                            <a href="/login" class="active" id="login-form-link">Login</a>
+                        </div>
+                        <div class="col-xs-6">
+                            <a href="/register" id="register-form-link">Register</a>
+                        </div>
+                    </div>
+                    <hr>
+                </div>
+                <div class="panel-body">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <form id="login-form" action="{{ path('login') }}" method="post" role="form" style="display: block;">
+                                <div class="form-group">
+                                    <input placeholder="Username" type="text" class="form-control" id="username" name="_username">
+                                </div>
+                                <div class="form-group">
+                                    <input  type="password" class="form-control" id="password" name="_password" placeholder="Password">
+                                </div>
+                                <div class="form-group">
+                                    <div class="row">
+                                        <div class="col-sm-6 col-sm-offset-3">
+                                            <input type="submit" name="login-submit" id="login-submit" class="form-control btn btn-login" value="Log In">
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-    {% endif %}
-</form>
-
+    </div>
 </div>
