--- a/app/Resources/views/security/register.html.twig
+++ b/app/Resources/views/security/register.html.twig
@@ -1,22 +1,44 @@
 {# app/Resources/views/registration/register.html.twig #}
 <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}" />
-<link rel="stylesheet" href="{{ asset('css/login.css') }}" />
-<h2 class="form-signin-heading">Please Register</h2>
-{{ form(form, {'attr': {'class': 'form-signin'}}) }}
-{% form_theme form _self %}
-
-{% block integer_widget %}
-    <div class="integer_widget">
-        {% set type = type|default('number') %}
-        {{ block('form_widget_simple') }}
+<link rel="stylesheet" href="{{ asset('css/logreg.css') }}" />
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+            <div class="panel panel-login">
+                <div class="panel-heading">
+                    <div class="row">
+                        <div class="col-xs-6">
+                            <a href="/login" id="login-form-link">Login</a>
+                        </div>
+                        <div class="col-xs-6">
+                            <a href="/register" class="active" id="register-form-link">Register</a>
+                        </div>
+                    </div>
+                    <hr>
+                </div>
+                <div class="panel-body">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            {{ form_start(form) }}
+                            <form id="login-form" class="form-signin" method="post" role="form" style="display: block;">
+                                <div class="form-group">
+                                    {{ form_row(form.username, {'attr': {'class': 'form-control'}})  }}
+                                </div>
+                                <div class="form-group">
+                                    {{ form_row(form.email, {'attr': {'class': 'form-control'}}) }}
+                                </div>
+                                <div class="from-group">
+                                    {{ form_row(form.plainPassword.first, {'attr': {'class': 'form-control'}}) }}
+                                </div>
+                                <div class="from-group">
+                                    {{ form_row(form.plainPassword.second, {'attr': {'class': 'form-control'}}) }} <br>
+                                </div>
+                                {{ form_end(form) }}
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-{% endblock %}
-{{ form_start(form) }}
-    {{ form_row(form.username, {'attr': {'class': 'loginForm'}})  }}
-    {{ form_row(form.email) }}
-    {{ form_row(form.plainPassword.first) }}
-    {{ form_row(form.plainPassword.second) }}
-<button type="submit" class="btn btn-lg btn-primary btn-block">Register!</button>
-{{ form_end(form) }}
-
-<li><a class="btn btn-primary btn-lg" href="/" role="button">Go back</a></li>
+</div>
