--- a/app/Resources/views/userpage.html.twig
+++ b/app/Resources/views/userpage.html.twig
@@ -1,37 +1,50 @@
-<link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}" />
-<link rel="stylesheet" href="{{ asset('css/login.css') }}" />
-<div>
-    <h1>Task manager KTU IFF-5/1</h1>
-    <h2>Welcome, user {{ username }}</h2>
-    <ul>
-        <li> <a href="/edit/{{ 0 }}" > Click Here to add new task </a></li>
-        <li> <a href="/category" > Click Here to go to category page </a></li>
-    </ul>
-        <table class="table">
-        <tr>
-            <th>ID</th>
-            <th>Status</th>
-            <th>Name</th>
-            <th>Description</th>
-            <th>Category</th>
-            <th>Author</th>
-            <th>Creation Date</th>
-            <th></th>
-            <th></th>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>Task Manager</title>
+    <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}" />
+    <link rel="stylesheet" href="{{ asset('css/styles.css') }}" />
+</head>
+<body>
 
-        </tr>
-        {% for task in tasks %}
-            <tr>
-                <td id>{{ task.Id }}</td>
-                <td>{{ task.Status }}</td>
-                <td>{{ task.Name }}</td>
-                <td>{{ task.Description }}</td>
-                <td>{{ task.Category }}</td>
-                <td>{{ task.Author }}</td>
-                <td>{{ task.CreationDate|date("m/d/Y") }}</td>
-                <td><a id="myLink" href="/edit/{{ task.ID }}" > Edit </a></td>
-                <td><a id="myLink" href="/delete/{{ task.ID }}" >Delete</a></td>
-                <?php echo 2+2; ?>            </tr>
-        {% endfor %}
-    </table>
+<div role="navigation" id="foo" class="nav-collapse">
+    <ul>
+        <li class="active"><a href="/home">Home</a></li>
+        <li><a href="/edit/{{ 0 }}">New Task</a></li>
+        <li><a href="/category">Categories</a></li>
+        <li><a href="/editcat/{{ 0 }}" >New Category</a></li>
+    </ul>
 </div>
+
+<div role="main" class="main">
+        <table class="table">
+            <tr>
+                <th>ID</th>
+                <th>Status</th>
+                <th>Name</th>
+                <th>Description</th>
+                <th>Category</th>
+                <th>Author</th>
+                <th>Creation Date</th>
+                <th></th>
+                <th></th>
+
+            </tr>
+            {% for task in tasks %}
+                <tr>
+                    <td id>{{ task.Id }}</td>
+                    <td>{{ task.Status }}</td>
+                    <td>{{ task.Name }}</td>
+                    <td>{{ task.Description }}</td>
+                    <td>{{ task.Category }}</td>
+                    <td>{{ task.Author }}</td>
+                    <td>{{ task.CreationDate|date("m/d/Y") }}</td>
+                    <td><a id="myLink" href="/edit/{{ task.ID }}" > Edit </a></td>
+                    <td><a id="myLink" href="/delete/{{ task.ID }}" >Delete</a></td>
+                    <?php echo 2+2; ?>            </tr>
+            {% endfor %}
+        </table>
+    </div>
+</body>
+</html>
