--- a/web/css/logreg.css
+++ b/web/css/logreg.css
@@ -1,5 +1,9 @@
 body {
-    padding-top: 90px;
+    padding-top: 10%;
+    background-image: url("../img/purple-background.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+
 }
 .panel-login {
     border-color: #ccc;
@@ -8,14 +12,14 @@ body {
     box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
 }
 .panel-login>.panel-heading {
-    color: grey;
+    color:#9c27b0;
     background-color: #fff;
     border-color: #fff;
     text-align:center;
 }
 .panel-login>.panel-heading a{
     text-decoration: none;
-    color: grey;
+    color:rgba(156, 39, 176, 0.28);
     font-weight: bold;
     font-size: 15px;
     -webkit-transition: all 0.1s linear;
@@ -23,8 +27,9 @@ body {
     transition: all 0.1s linear;
 }
 .panel-login>.panel-heading a.active{
-    color: black;
+    background-color:white;
     font-size: 18px;
+    color:#9c27b0;
 }
 .panel-login>.panel-heading hr{
     margin-top: 10px;
@@ -54,7 +59,7 @@ body {
     border-color: #ccc;
 }
 .btn-login {
-    background-color: black;
+    background-color: #9c27b0;
     outline: none;
     color: white;
     font-size: 14px;
@@ -62,16 +67,16 @@ body {
     font-weight: normal;
     padding: 14px 0;
     text-transform: uppercase;
+    width:100%;
 }
 .btn-login:hover,
 .btn-login:focus {
     color: white;
-    background-color: grey;
-    border-color: whitegrey;
+    background-color: #9c27b0;
 }
 
 .btn-register {
-    background-color: black;
+    background-color: #9c27b0;
     outline: none;
     color: white;
     font-size: 14px;
@@ -83,6 +88,5 @@ body {
 .btn-register:hover,
 .btn-register:focus {
     color: #fff;
-    background-color: grey;
-    border-color: whitegrey;
+    background-color: #9c27b0;
 }
