--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -83,28 +83,28 @@ tr.task {
     background: url(http://jackrugile.com/images/misc/noise-diagonal.png);
 }
 
-tr.task:nth-child(odd) td.task {
+tr.task:nth-child(odd) td {
     background: #f1f1f1 url(http://jackrugile.com/images/misc/noise-diagonal.png);
 }
 
-tr.task:last-of-type td.task {
+tr.task:last-of-type td {
     box-shadow: inset 0 -1px 0 #fff;
 }
 
-tr.task:last-of-type td.task:first-child {
+tr.task:last-of-type td:first-child {
     box-shadow: inset 1px -1px 0 #fff;
 }
 
-tr.task:last-of-type td.task:last-child {
+tr.task:last-of-type td:last-child {
     box-shadow: inset -1px -1px 0 #fff;
 }
 
-tbody.task:hover td.task {
+tbody.task:hover td{
     color: transparent;
     text-shadow: 0 0 3px #aaa;
 }
 
-tbody.task:hover tr.task:hover td.task {
+tbody.task:hover tr:hover td {
     color: #444;
     text-shadow: 0 1px 0 #fff;
 }
