--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -30,7 +30,7 @@
                                 <div class="form-group">
                                     <div class="row">
                                         <div class="col-sm-6 col-sm-offset-3">
-                                            <input type="submit" name="login-submit" id="login-submit" class="form-control btn btn-login" value="Log In">
+                                            <button type="submit" name="login-submit" id="login-submit" class="form-control btn-login">Log In</button>
                                         </div>
                                     </div>
                                 </div>
