--- a/app/Resources/views/newcategory.html.twig
+++ b/app/Resources/views/newcategory.html.twig
@@ -1,27 +1,143 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
+    <link rel="apple-touch-icon" sizes="76x76" href="{{ asset('img/apple-icon.png') }}" />
+    <link rel="icon" type="image/png" href="{{ asset('img/favicon.png') }}"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+
     <title>Task Manager</title>
-    <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}" />
-    <link rel="stylesheet" href="{{ asset('css/styles.css') }}" />
+
+    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+    <meta name="viewport" content="width=device-width" />
+
+
+    <!-- Bootstrap core CSS     -->
+    <link href="{{ asset('css/bootstrap.min.css') }}" rel="stylesheet" />
+
+    <!--  Material Dashboard CSS    -->
+    <link href="{{ asset('css/material-dashboard.css') }}" rel="stylesheet"/>
+
+    <!--     Fonts and icons     -->
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300|Material+Icons' rel='stylesheet' type='text/css'>
 </head>
+
 <body>
 
-<div role="navigation" id="foo" class="nav-collapse">
-    <ul>
-        <li><a href="/home">Home</a></li>
-        <li><a href="/edit/{{ 0 }}">New Task</a></li>
-        <li><a href="/category">Categories</a></li>
-        <li class="active"><a href="/editcat/{{ 0 }}" >New Category</a></li>
-    </ul>
+<div class="wrapper">
+    <div class="sidebar" data-color="purple" data-image="{{ asset('img/sidebar-1.jpg') }}">
+
+        <!--
+            Spalvu keitimas: data-color="purple | blue | green | orange | red"
+        -->
+
+        <div class="logo">
+            <a href="/home" class="simple-text">
+                Task Manager
+            </a>
+        </div>
+
+        <div class="sidebar-wrapper">
+            <ul class="nav">
+                <li>
+                    <a href="/home">
+                        <i class="material-icons">content_paste</i>
+                        <p>Home</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="/category">
+                        <i class="material-icons">description</i>
+                        <p>Categories</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="/edit/{{ 0 }}">
+                        <i class="material-icons">note_add</i>
+                        <p>Configure Task</p>
+                    </a>
+                </li>
+                <li class="active">
+                    <a href="/editcat/{{ 0 }}">
+                        <i class="material-icons">note_add</i>
+                        <p>Configure Categories</p>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="main-panel">
+        <nav class="navbar navbar-transparent navbar-absolute">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">Categories</a>
+                </div>
+                <div class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                <i class="material-icons">exit_to_app</i>
+                                <p class="hidden-lg hidden-md">Log Out</p>
+                            </a>
+                        </li>
+                    </ul>
+
+                    <form class="navbar-form navbar-right" role="search">
+                        <div class="form-group  is-empty">
+                            <input type="text" class="form-control" placeholder="Search">
+                            <span class="material-input"></span>
+                        </div>
+                        <button type="submit" class="btn btn-white btn-round btn-just-icon">
+                            <i class="material-icons">search</i><div class="ripple-container"></div>
+                        </button>
+                    </form>
+                </div>
+            </div>
+        </nav>
+
+        <div class="content">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="card">
+                            <div class="card-header" data-background-color="purple">
+                                <h4 class="title">Configure Categories</h4>
+                            </div>
+                            <div class="card-content table-responsive">
+                                {% form_theme form 'bootstrap_3_layout.html.twig' %}
+                                {{ form_start(form) }}
+                                {{ form_widget(form) }}
+                                {{ form_end(form) }}
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
-<div role="main" class="main">
-    {% form_theme form 'bootstrap_3_layout.html.twig' %}
-    {{ form_start(form) }}
-    {{ form_widget(form) }}
-    {{ form_end(form) }}
-</div>
 </body>
+
+<!--   Core JS Files   -->
+<script src="{{ asset('js/jquery-3.1.0.min.js') }}" type="text/javascript"></script>
+<script src="{{ asset('js/bootstrap.min.js') }}" type="text/javascript"></script>
+<script src="{{ asset('js/material.min.js') }}" type="text/javascript"></script>
+
+<!-- Material Dashboard javascript methods -->
+<script src="{{ asset('js/material-dashboard.js') }}"></script>
+
+
 </html>
+
+
+
