--- a/app/Resources/views/newcategory.html.twig
+++ b/app/Resources/views/newcategory.html.twig
@@ -83,7 +83,7 @@
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <li>
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            <a href="/logout">
                                 <i class="material-icons">exit_to_app</i>
                                 <p class="hidden-lg hidden-md">Log Out</p>
                             </a>
