--- a/app/Resources/views/category.html.twig
+++ b/app/Resources/views/category.html.twig
@@ -64,6 +64,12 @@
                         <p>Configure Categories</p>
                     </a>
                 </li>
+                <li>
+                    <a href="/calendar">
+                        <i class="material-icons">description</i>
+                        <p>Calendar</p>
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
