--- a/app/Resources/views/calendar.html.twig
+++ b/app/Resources/views/calendar.html.twig
@@ -10,8 +10,7 @@
 
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
-
-
+    <link rel="stylesheet" href="css/fullcalendar.css">
     <!-- Bootstrap core CSS     -->
     <link href="{{ asset('css/bootstrap.min.css') }}" rel="stylesheet" />
 
@@ -21,8 +20,6 @@
     <!--     Fonts and icons     -->
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300|Material+Icons' rel='stylesheet' type='text/css'>
-</head>
-
 <body>
 
 <div class="wrapper">
@@ -43,7 +40,7 @@
                 <li>
                     <a href="/home">
                         <i class="material-icons">content_paste</i>
-                        <p>Home</p>
+                        <p href="/calendar">Home</p>
                     </a>
                 </li>
                 <li>
@@ -58,13 +55,13 @@
                         <p>Configure Task</p>
                     </a>
                 </li>
-                <li class="active">
+                <li>
                     <a href="/editcat/{{ 0 }}">
                         <i class="material-icons">note_add</i>
                         <p>Configure Categories</p>
                     </a>
                 </li>
-                <li>
+                <li class="active">
                     <a href="/calendar">
                         <i class="material-icons">description</i>
                         <p>Calendar</p>
@@ -84,7 +81,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Categories</a>
+                    <a class="navbar-brand" href="#">Calendar</a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
@@ -98,7 +95,7 @@
 
                     <form class="navbar-form navbar-right" role="search">
                         <div class="form-group  is-empty">
-                            <input type="text" class="form-control" placeholder="Search">
+                            <input type="text" class="form-control" placeholder="Search" name ="search">
                             <span class="material-input"></span>
                         </div>
                         <button type="submit" class="btn btn-white btn-round btn-just-icon">
@@ -115,14 +112,11 @@
                     <div class="col-md-12">
                         <div class="card">
                             <div class="card-header" data-background-color="purple">
-                                <h4 class="title">Configure Categories</h4>
+                                <h4 class="title">Calendar</h4>
                             </div>
                             <div class="card-content table-responsive">
-                                {% form_theme form 'bootstrap_3_layout.html.twig' %}
-                                {{ form_start(form) }}
-                                {{ form_widget(form) }}
-                                {{ form_end(form) }}
 
+                                <div id="calendar"></div>
                             </div>
                         </div>
                     </div>
@@ -131,19 +125,20 @@
         </div>
     </div>
 </div>
+<script src="{{ asset('js/jquery-3.1.0.min.js') }}" type="text/javascript"></script>
+<script src="js/moment.min.js"></script>
+<script src="js/fullcalendar.js"></script>
+<script src="js/main.js"></script>
 
-</body>
 
 <!--   Core JS Files   -->
-<script src="{{ asset('js/jquery-3.1.0.min.js') }}" type="text/javascript"></script>
 <script src="{{ asset('js/bootstrap.min.js') }}" type="text/javascript"></script>
 <script src="{{ asset('js/material.min.js') }}" type="text/javascript"></script>
 
 <!-- Material Dashboard javascript methods -->
 <script src="{{ asset('js/material-dashboard.js') }}"></script>
+</body>
+
 
 
 </html>
-
-
-
