Uzduociu sort'as
Galima perziureti tik tam tikras uzduotis pagal ju statusa, pvz.: "New", "In Progress" arba "Finished".

--- a/app/Resources/views/userpage.html.twig
+++ b/app/Resources/views/userpage.html.twig
@@ -118,6 +118,7 @@
                     <div class="card-content table-responsive">
                         <h4>Number of tasks: {{ numberOfTasks }}</h4>
                         <h5>Your points: {{ points }} ({{ points /50 }} task(-s) finished)</h5>
+                        <a href="/home">All</a><a> | </a><a href="/home/new">New</a><a> | </a><a href="/home/inprogress">In progress</a><a> | </a><a href="/home/finished">Finished</a>
                     <table class="table">
                         <thead class="text-primary">
                             <th>ID</th>
