--- a/app/Resources/views/calendar.html.twig
+++ b/app/Resources/views/calendar.html.twig
@@ -1,36 +1,6 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-</head>
-
-<body>
-<div class="container">
-
-    <div class="row">
-        <div class="col-sm-12">
-            {% include ('::flashmessages.html.twig') %}
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-sm-12">
-            {% block body %}
-            {% endblock %}
-        </div>
-    </div>
-
-</div><!-- /.container -->
-
-{% block javascripts %}
-
-{% endblock %}
-</body>
-<head>
-
     <meta charset="utf-8" />
     <link rel="apple-touch-icon" sizes="76x76" href="{{ asset('img/apple-icon.png') }}" />
     <link rel="icon" type="image/png" href="{{ asset('img/favicon.png') }}"/>
@@ -40,8 +10,7 @@
 
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
-
-
+    <link rel="stylesheet" href="css/fullcalendar.css">
     <!-- Bootstrap core CSS     -->
     <link href="{{ asset('css/bootstrap.min.css') }}" rel="stylesheet" />
 
@@ -50,11 +19,8 @@
 
     <!--     Fonts and icons     -->
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
-
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300|Material+Icons' rel='stylesheet' type='text/css'>
-    {#<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">#}
 <body>
-
 
 <div class="wrapper">
     <div class="sidebar" data-color="purple" data-image="{{ asset('img/sidebar-1.jpg') }}">
@@ -71,10 +37,10 @@
 
         <div class="sidebar-wrapper">
             <ul class="nav">
-                <li class="active">
+                <li>
                     <a href="/home">
                         <i class="material-icons">content_paste</i>
-                        <p>Home</p>
+                        <p href="/calendar">Home</p>
                     </a>
                 </li>
                 <li>
@@ -95,7 +61,7 @@
                         <p>Configure Categories</p>
                     </a>
                 </li>
-                <li>
+                <li class="active">
                     <a href="/calendar">
                         <i class="material-icons">description</i>
                         <p>Calendar</p>
@@ -106,7 +72,6 @@
     </div>
 
     <div class="main-panel">
-        {% set counter = 1  %}
         <nav class="navbar navbar-transparent navbar-absolute">
             <div class="container-fluid">
                 <div class="navbar-header">
@@ -116,7 +81,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Home</a>
+                    <a class="navbar-brand" href="#">Calendar</a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
@@ -147,42 +112,12 @@
                     <div class="col-md-12">
                         <div class="card">
                             <div class="card-header" data-background-color="purple">
-                                <h4 class="title">Tasks</h4>
+                                <h4 class="title">Calendar</h4>
                             </div>
-                    <div class="card-content table-responsive">
-                        <h4>Number of tasks: {{ numberOfTasks }}</h4>
-                        <h5>Your points: {{ points }} ({{ points /50 }} task(-s) finished)</h5>
-                        <a href="/home">All</a><a> | </a><a href="/home/new">New</a><a> | </a><a href="/home/inprogress">In progress</a><a> | </a><a href="/home/finished">Finished</a>
-                    <table class="table">
-                        <thead class="text-primary">
-                            <th>ID</th>
-                            <th>Status</th>
-                            <th>Name</th>
-                            <th>Description</th>
-                            <th>Category</th>
-                            <th>Author</th>
-                            <th>Creation Date</th>
-                            <th></th>
-                            <th></th>
+                            <div class="card-content table-responsive">
 
-                        </thead>
-                        {% for task in tasks %}
-                        <tbody>
-                        <tr>
-                                <td>{{ counter }}</td>
-                                {% set counter = counter + 1 %}
-                                <td>{{ task.Status }}</td>
-                                <td>{{ task.Name }}</td>
-                                <td>{{ task.Description }}</td>
-                                <td>{{ task.Category }}</td>
-                                <td>{{ task.Author }}</td>
-                                <td>{{ task.CreationDate|date("m/d/Y") }}</td>
-                                <td><a id="myLink" href="/edit/{{ task.ID }}" > Edit </a></td>
-                                <td><a id="myLink" href="/delete/{{ task.ID }}" >Delete</a></td>
-                            <?php echo 2+2; ?>            </tr></tbody>
-                        {% endfor %}
-                    </table>
-                    </div>
+                                <div id="calendar"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -190,15 +125,20 @@
         </div>
     </div>
 </div>
+<script src="{{ asset('js/jquery-3.1.0.min.js') }}" type="text/javascript"></script>
+<script src="js/moment.min.js"></script>
+<script src="js/fullcalendar.js"></script>
+<script src="js/main.js"></script>
 
-</body>
 
 <!--   Core JS Files   -->
-<script src="{{ asset('js/jquery-3.1.0.min.js') }}" type="text/javascript"></script>
 <script src="{{ asset('js/bootstrap.min.js') }}" type="text/javascript"></script>
 <script src="{{ asset('js/material.min.js') }}" type="text/javascript"></script>
 
 <!-- Material Dashboard javascript methods -->
 <script src="{{ asset('js/material-dashboard.js') }}"></script>
+</body>
+
+
 
 </html>
