--- a/app/Resources/views/category.html.twig
+++ b/app/Resources/views/category.html.twig
@@ -1,6 +1,35 @@
 <!doctype html>
 <html lang="en">
 <head>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+</head>
+
+<body>
+<div class="container">
+
+    <div class="row">
+        <div class="col-sm-12">
+            {% include ('::flashmessages.html.twig') %}
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-12">
+            {% block body %}
+            {% endblock %}
+        </div>
+    </div>
+
+</div><!-- /.container -->
+
+{% block javascripts %}
+
+{% endblock %}
+</body>
+<head>
     <meta charset="utf-8" />
     <link rel="apple-touch-icon" sizes="76x76" href="{{ asset('img/apple-icon.png') }}" />
     <link rel="icon" type="image/png" href="{{ asset('img/favicon.png') }}"/>
@@ -62,6 +91,12 @@
                     <a href="/editcat/{{ 0 }}">
                         <i class="material-icons">note_add</i>
                         <p>Configure Categories</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="/calendar">
+                        <i class="material-icons">description</i>
+                        <p>Calendar</p>
                     </a>
                 </li>
             </ul>
