--- a/app/Resources/views/userpage.html.twig
+++ b/app/Resources/views/userpage.html.twig
@@ -162,6 +162,7 @@
                             <th>Category</th>
                             <th>Author</th>
                             <th>Creation Date</th>
+                            <th>Deadline Date</th>
                             <th></th>
                             <th></th>
 
@@ -177,6 +178,7 @@
                                 <td>{{ task.Category }}</td>
                                 <td>{{ task.Author }}</td>
                                 <td>{{ task.CreationDate|date("m/d/Y") }}</td>
+                                <td>{{ task.DeadlineDate|date("m/d/Y") }}</td>
                                 <td><a id="myLink" href="/edit/{{ task.ID }}" > Edit </a></td>
                                 <td><a id="myLink" href="/delete/{{ task.ID }}" >Delete</a></td>
                             <?php echo 2+2; ?>            </tr></tbody>
