--- a/app/Resources/views/calendar.html.twig
+++ b/app/Resources/views/calendar.html.twig
@@ -32,6 +32,7 @@
         <div class="logo">
             <a href="/home" class="simple-text">
                 Task Manager
+                <h6>Today is: {{ "now"|date(" d/m/Y") }}</h6>
             </a>
         </div>
 
