--- a/app/Resources/views/newtask.html.twig
+++ b/app/Resources/views/newtask.html.twig
@@ -35,6 +35,7 @@
         <div class="logo">
             <a href="/home" class="simple-text">
                 Task Manager
+                <h6>Today is: {{ "now"|date(" d/m/Y") }}</h6>
             </a>
         </div>
 
