--- a/app/Resources/views/asigntasks.html.twig
+++ b/app/Resources/views/asigntasks.html.twig
@@ -1,12 +1,6 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-</head>
-
     <meta charset="utf-8" />
     <link rel="apple-touch-icon" sizes="76x76" href="{{ asset('img/apple-icon.png') }}" />
     <link rel="icon" type="image/png" href="{{ asset('img/favicon.png') }}"/>
@@ -26,10 +20,10 @@
 
     <!--     Fonts and icons     -->
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
-
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300|Material+Icons' rel='stylesheet' type='text/css'>
-<body>
+</head>
 
+<body>
 
 <div class="wrapper">
     <div class="sidebar" data-color="purple" data-image="{{ asset('img/sidebar-1.jpg') }}">
@@ -47,7 +41,7 @@
 
         <div class="sidebar-wrapper">
             <ul class="nav">
-                <li class="active">
+                <li>
                     <a href="/home">
                         <i class="material-icons">content_paste</i>
                         <p>Home</p>
@@ -77,7 +71,7 @@
                         <p>Calendar</p>
                     </a>
                 </li>
-                <li>
+                <li class="active">
                     <a href="/asign">
                         <i class="material-icons">description</i>
                         <p>Asign tasks</p>
@@ -88,7 +82,6 @@
     </div>
 
     <div class="main-panel">
-        {% set counter = 1  %}
         <nav class="navbar navbar-transparent navbar-absolute">
             <div class="container-fluid">
                 <div class="navbar-header">
@@ -98,7 +91,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Home</a>
+                    <a class="navbar-brand" href="#">Tasks</a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
@@ -112,7 +105,7 @@
 
                     <form class="navbar-form navbar-right" role="search">
                         <div class="form-group  is-empty">
-                            <input type="text" class="form-control" placeholder="Search" name ="search">
+                            <input type="text" class="form-control" placeholder="Search">
                             <span class="material-input"></span>
                         </div>
                         <button type="submit" class="btn btn-white btn-round btn-just-icon">
@@ -129,53 +122,15 @@
                     <div class="col-md-12">
                         <div class="card">
                             <div class="card-header" data-background-color="purple">
-                                <h4 class="title">Tasks</h4>
+                                <h4 class="title">Configure Task</h4>
                             </div>
-                    <div class="card-content table-responsive">
-                        <h4>Number of tasks: {{ numberOfTasks }}</h4>
-                        <h5>Your points: {{ points }} ({{ points /50 }} task(-s) finished ({{ (points/numberOfTasks*2)|number_format(2) }} %))! </h5>
-                            <ul class="list-inline pull-right sort">
-                                <li><a class="btn" href="/home">All</a></li>
-                                <li><a class="btn" href="/home/new">New</a></li>
-                                <li><a class="btn" href="/home/inprogress">In progress</a></li>
-                                <li><a class="btn" href="/home/finished">Finished</a></li>
-                            </ul>
-                    <table class="table">
-                        <thead class="text-primary">
-                            <th>ID</th>
-                            <th>Status</th>
-                            <th>Name</th>
-                            <th>Description</th>
-                            <th>Category</th>
-                            <th>Author</th>
-                            <th>Deadline Date</th>
-                            <th>Out of date?</th>
-                            <th></th>
-                            <th></th>
+                            <div class="card-content table-responsive">
+                                {% form_theme form 'bootstrap_3_layout.html.twig' %}
+                                {{ form_start(form) }}
+                                {{ form_widget(form) }}
+                                {{ form_end(form) }}
 
-                        </thead>
-                        {% for task in tasks %}
-                        <tbody>
-                        <tr>
-                                <td>{{ counter }}</td>
-                                {% set counter = counter + 1 %}
-                                <td>{{ task.Status }}</td>
-                                <td>{{ task.Name }}</td>
-                                <td>{{ task.Description }}</td>
-                                <td>{{ task.Category }}</td>
-                                <td>{{ task.Author }}</td>
-                                <td>{{ task.DeadlineDate|date("m/d/Y") }}</td>
-                            {% if task.DeadlineDate|date("U") < "now"|date("U")  %}
-                                <td>Yes</td>
-                                {% else %}
-                                <td>No</td>
-                            {% endif %}
-                                <td><a id="myLink" href="/edit/{{ task.ID }}" > Edit </a></td>
-                                <td><a id="myLink" href="/delete/{{ task.ID }}" >Delete</a></td>
-                            <?php echo 2+2; ?>            </tr></tbody>
-                        {% endfor %}
-                    </table>
-                    </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -186,8 +141,6 @@
 
 </body>
 
-<script src="{{ asset('js/sort.js') }}"></script>
-
 <!--   Core JS Files   -->
 <script src="{{ asset('js/jquery-3.1.0.min.js') }}" type="text/javascript"></script>
 <script src="{{ asset('js/bootstrap.min.js') }}" type="text/javascript"></script>
@@ -195,5 +148,7 @@
 
 <!-- Material Dashboard javascript methods -->
 <script src="{{ asset('js/material-dashboard.js') }}"></script>
+
+
 
 </html>
