--- a/app/Resources/views/newtask.html.twig
+++ b/app/Resources/views/newtask.html.twig
@@ -71,6 +71,12 @@
                         <p>Calendar</p>
                     </a>
                 </li>
+                <li>
+                    <a href="/asign">
+                        <i class="material-icons">description</i>
+                        <p>Asign tasks</p>
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
