--- a/app/Resources/views/userpage.html.twig
+++ b/app/Resources/views/userpage.html.twig
@@ -143,11 +143,11 @@
                     <table class="table">
                         <thead class="text-primary">
                             <th>ID</th>
-                            <th>{{ knp_pagination_sortable(tasks, 'Status', 'task.Status') }}</th>
-                            <th>{{ knp_pagination_sortable(tasks, 'Name', 'task.Name') }}</th>
-                            <th>{{ knp_pagination_sortable(tasks, 'Description', 'task.Description') }}</th>
-                            <th>{{ knp_pagination_sortable(tasks, 'Category', 'task.Category') }}</th>
-                            <th>{{ knp_pagination_sortable(tasks, 'Author', 'task.Author') }}</th>
+                            <th>{{ knp_pagination_sortable(tasks, 'Status', 'task.status') }}</th>
+                            <th>{{ knp_pagination_sortable(tasks, 'Name', 'task.name') }}</th>
+                            <th>{{ knp_pagination_sortable(tasks, 'Description', 'task.description') }}</th>
+                            <th>{{ knp_pagination_sortable(tasks, 'Category', 'task.category') }}</th>
+                            <th>{{ knp_pagination_sortable(tasks, 'Author', 'task.author') }}</th>
                             <th>Deadline Date</th>
                             <th>Out of date?</th>
                             <th></th>
