Priskirtų užduočių patvirtinimas
Vartotojui priskyrus užduotį kitam vartotojui(-jams), tas(-tie) kuriam(-iems) yra priskirta užduotis, ją turi patvirtinti arba gali atsisakyti(ištrinti).
Pvz.:
admin priskyrė užduotį "išnešti šiukšles" vartotojams: Ignas, Gytis, Augustas. Kiekvienas iš jų priskirtą užduotį turi patvirtinti, kad ji atsirastu jų užduočių sąraše, arba gali jos atsisakyti.

--- a/app/Resources/views/category.html.twig
+++ b/app/Resources/views/category.html.twig
@@ -83,7 +83,13 @@
                 <li>
                     <a href="/asign">
                         <i class="material-icons">description</i>
-                        <p>Asign tasks</p>
+                        <p>Asign Task</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="/asigned">
+                        <i class="material-icons">description</i>
+                        <p>Asiged Tasks</p>
                     </a>
                 </li>
             </ul>
