--- a/app/Resources/views/asignedtasks.html.twig
+++ b/app/Resources/views/asignedtasks.html.twig
@@ -1,26 +1,35 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <link rel="apple-touch-icon" sizes="76x76" href="{{ asset('img/apple-icon.png') }}" />
-    <link rel="icon" type="image/png" href="{{ asset('img/favicon.png') }}"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
 
-    <title>Task Manager</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+</head>
 
-    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
-    <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="css/fullcalendar.css">
-    <!-- Bootstrap core CSS     -->
-    <link href="{{ asset('css/bootstrap.min.css') }}" rel="stylesheet" />
+<meta charset="utf-8" />
+<link rel="apple-touch-icon" sizes="76x76" href="{{ asset('img/apple-icon.png') }}" />
+<link rel="icon" type="image/png" href="{{ asset('img/favicon.png') }}"/>
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-    <!--  Material Dashboard CSS    -->
-    <link href="{{ asset('css/material-dashboard.css') }}" rel="stylesheet"/>
+<title>Task Manager</title>
 
-    <!--     Fonts and icons     -->
-    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300|Material+Icons' rel='stylesheet' type='text/css'>
+<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+<meta name="viewport" content="width=device-width" />
+
+
+<!-- Bootstrap core CSS     -->
+<link href="{{ asset('css/bootstrap.min.css') }}" rel="stylesheet" />
+
+<!--  Material Dashboard CSS    -->
+<link href="{{ asset('css/material-dashboard.css') }}" rel="stylesheet"/>
+
+<!--     Fonts and icons     -->
+<link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
+
+<link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300|Material+Icons' rel='stylesheet' type='text/css'>
 <body>
+
 
 <div class="wrapper">
     <div class="sidebar" data-color="purple" data-image="{{ asset('img/sidebar-1.jpg') }}">
@@ -41,7 +50,7 @@
                 <li>
                     <a href="/home">
                         <i class="material-icons">content_paste</i>
-                        <p href="/calendar">Home</p>
+                        <p>Home</p>
                     </a>
                 </li>
                 <li>
@@ -62,7 +71,7 @@
                         <p>Configure Categories</p>
                     </a>
                 </li>
-                <li class="active">
+                <li>
                     <a href="/calendar">
                         <i class="material-icons">description</i>
                         <p>Calendar</p>
@@ -71,10 +80,10 @@
                 <li>
                     <a href="/asign">
                         <i class="material-icons">description</i>
-                        <p>Asign Task</p>
+                        <p>Asign Tasks</p>
                     </a>
                 </li>
-                <li>
+                <li class="active">
                     <a href="/asigned">
                         <i class="material-icons">description</i>
                         <p>Asiged Tasks</p>
@@ -85,6 +94,7 @@
     </div>
 
     <div class="main-panel">
+        {% set counter = 1  %}
         <nav class="navbar navbar-transparent navbar-absolute">
             <div class="container-fluid">
                 <div class="navbar-header">
@@ -94,7 +104,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Calendar</a>
+                    <a class="navbar-brand" href="#">Asigned Tasks</a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
@@ -125,11 +135,42 @@
                     <div class="col-md-12">
                         <div class="card">
                             <div class="card-header" data-background-color="purple">
-                                <h4 class="title">Calendar</h4>
+                                <h4 class="title">Tasks</h4>
                             </div>
                             <div class="card-content table-responsive">
 
-                                <div id="calendar"></div>
+                                <table class="table">
+                                    <thead class="text-primary">
+                                    <th>ID</th>
+                                    <th>Status</th>
+                                    <th>Name</th>
+                                    <th>Description</th>
+                                    <th>Category</th>
+                                    <th>Deadline Date</th>
+                                    <th>Out of date?</th>
+                                    <th></th>
+                                    <th></th>
+
+                                    </thead>
+                                    {% for task in tasks %}
+                                        <tbody>
+                                        <tr>
+                                            <td>{{ task.ID }}</td>
+                                            <td>{{ task.Status }}</td>
+                                            <td>{{ task.Name }}</td>
+                                            <td>{{ task.Description }}</td>
+                                            <td>{{ task.Category }}</td>
+                                            <td>{{ task.DeadlineDate|date("m/d/Y") }}</td>
+                                            {% if task.DeadlineDate|date("U") < "now"|date("U")  %}
+                                                <td>Yes</td>
+                                            {% else %}
+                                                <td>No</td>
+                                            {% endif %}
+                                            <td><a id="myLink" href="/accept/{{ task.ID }}" > Accept </a></td>
+                                            <td><a id="myLink" href="/deleted/{{ task.ID }}" >Delete</a></td>
+                                            <?php echo 2+2; ?>            </tr></tbody>
+                                    {% endfor %}
+                                </table>
                             </div>
                         </div>
                     </div>
@@ -138,20 +179,17 @@
         </div>
     </div>
 </div>
-<script src="{{ asset('js/jquery-3.1.0.min.js') }}" type="text/javascript"></script>
-<script src="js/moment.min.js"></script>
-<script src="js/fullcalendar.js"></script>
-<script src="js/main.js"></script>
 
+</body>
+
+<script src="{{ asset('js/sort.js') }}"></script>
 
 <!--   Core JS Files   -->
+<script src="{{ asset('js/jquery-3.1.0.min.js') }}" type="text/javascript"></script>
 <script src="{{ asset('js/bootstrap.min.js') }}" type="text/javascript"></script>
 <script src="{{ asset('js/material.min.js') }}" type="text/javascript"></script>
 
 <!-- Material Dashboard javascript methods -->
 <script src="{{ asset('js/material-dashboard.js') }}"></script>
-</body>
-
-
 
 </html>
