--- a/app/Resources/views/asigntasks.html.twig
+++ b/app/Resources/views/asigntasks.html.twig
@@ -74,7 +74,13 @@
                 <li class="active">
                     <a href="/asign">
                         <i class="material-icons">description</i>
-                        <p>Asign tasks</p>
+                        <p>Asign Task</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="/asigned">
+                        <i class="material-icons">description</i>
+                        <p>Asiged Tasks</p>
                     </a>
                 </li>
             </ul>
@@ -91,7 +97,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Tasks</a>
+                    <a class="navbar-brand" href="#">Asign Task</a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
